fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,15 @@ body {
     background-color: #25274d;
 }
 
+.titleContainer {
+    width: 700px;
+    margin: 0 auto;
+}
+
 h1 {
     text-align: center;
     color: #45a29e;
     font-size: 50px;
-    width: 700px;
 }
 
 .main {
